--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Ristorante Con Fusion</title>
 </head>
 
 <body>
-
     <header>
         <div>
             <div>
@@ -19,7 +23,6 @@
             </div>
         </div>
     </header>
-
     <div>
         <div>
             <div>
@@ -31,7 +34,6 @@
             </div>
         </div>
 
-
         <div>
             <div>
                 <h3>This Month's Promotions</h3>
@@ -41,7 +43,6 @@
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
             </div>
         </div>
-
         <div>
             <div>
                 <h3>Meet our Culinary Specialists</h3>
@@ -53,10 +54,9 @@
             </div>
         </div>
     </div>
-
     <footer>
         <div>
-            <div>             
+            <div>
                 <div>
                     <h5>Links</h5>
                     <ul>
@@ -69,13 +69,13 @@
                 <div>
                     <h5>Our Address</h5>
                     <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              Tel.: +852 1234 5678<br>
-		              Fax: +852 8765 4321<br>
-		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
+                        121, Clear Water Bay Road<br>
+                        Clear Water Bay, Kowloon<br>
+                        HONG KONG<br>
+                        Tel.: +852 1234 5678<br>
+                        Fax: +852 8765 4321<br>
+                        Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+                    </address>
                 </div>
                 <div>
                     <div>
@@ -87,15 +87,18 @@
                         <a href="mailto:">Mail</a>
                     </div>
                 </div>
-           </div>
-           <div>             
+            </div>
+            <div>
                 <div>
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
-
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    
 </body>
 
 </html>
