--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
+    <link href="css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Ristorante Con Fusion</title>
 </head>
@@ -14,7 +15,7 @@
     <header>
         <div>
             <div>
-                <div>
+                <div class="row row-header">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
@@ -24,7 +25,7 @@
         </div>
     </header>
     <div>
-        <div>
+        <div class="row row-content align-items-center">
             <div>
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -34,7 +35,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="row row-content align-items-center">
             <div>
                 <h3>This Month's Promotions</h3>
             </div>
@@ -43,7 +44,7 @@
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
             </div>
         </div>
-        <div>
+        <div class="row row-content align-items-center">
             <div>
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -54,12 +55,12 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="footer">
         <div>
             <div>
                 <div>
                     <h5>Links</h5>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
@@ -77,8 +78,8 @@
                         Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
-                <div>
-                    <div>
+                <div class="col-12 col-sm-4 align-self-center">
+                    <div class="text-center">
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                         <a href="http://www.linkedin.com/in/">LinkedIn</a>
@@ -88,8 +89,8 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="row justify-content-center">
+                <div class="col-auto">
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
             </div>
