--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-
+	<link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Ristorante Con Fusion: About Us</title>
 
 </head>
